--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
   <h1>Kalen</h1>
   <p>Welcome to my website!</p>
+  <ul>
+   <li>Purps</li>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
