--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <p>Welcome to my website!</p>
   <ul>
    <li>Purps</li>
+   <li>Green</li>
+   <li>Red</li>
+   <li>Purps</li>
+  </ul>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
